--- a/brooklyn-source/index.html
+++ b/brooklyn-source/index.html
@@ -1,63 +1,57 @@
 <!doctype html>
 <html lang="en">
+<div style="margin-left: 20px">
 <head>
 	<meta charset="utf-8">
 	<meta name="description" content="">
 	<meta name="keywords" content="">
-	
-	<title>Brook &amp; Lyn</title>
 
-	<!-- external CSS link -->
+	<title>Brook &amp; Lyn</title>
 	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/style.css">
+<style>
+
+	.x{
+		border: 3px solid grey ;
+	}
+</style>
 </head>
 
 <body>
-	<div id="container">
-		<div id="logo"><img src="images/brook-and-lyn-logo.gif"/></div>
-		<div class="content"><img src="images/home-bloghero.png"/></div>
-		<div class="content"><img src="images/home-rings.png"/></div>
-		<div class="content" id="article">
-			<h2>Our Latest Collection</h2>
+<div id="container">
+	<div id="logo"><img src="images/brook-and-lyn-logo.gif"/></div>
+	<div class="content"><img src="images/home-bloghero.png"/></div>
+	<div class="content"><img src="images/home-rings.png"/></div>
+	<div class="content" id="article">
+		<h2>Our Latest Collection</h2>
 
-			<h5>May 25, 2012</h5>
-			<p>
-				Quickly re-engineer business growth strategies with sustainable web-readiness. Collaboratively create visionary growth strategies vis-a-vis cooperative functionalites. Holisticly extend cross-media technologies rather than cutting-edge experiences. <a href="#">Read More...</a>
-			</p>
+		<h5>May 25, 2012</h5>
+		<small><p>
+			Quickly re-engineer business growth strategies with sustainable web-readiness. Collaboratively create visionary growth strategies vis-a-vis cooperative functionalites.
+			Holisticly <br>extend cross-media technologies rather than cutting-edge experiences. <a href="#">Read More...</a>
+		</p>
 
-			<p>
-				Quickly re-engineer business growth strategies with sustainable web-readiness. Collaboratively create visionary growth strategies vis-a-vis cooperative functionalites. Holisticly extend cross-media technologies rather than cutting-edge experiences. <a href="#">Read More...</a>
-			</p>
-		</div>
+		<p>
+			Quickly re-engineer business growth strategies with sustainable web-readiness. Collaboratively create visionary growth strategies vis-a-vis cooperative functionalites. Holisticly<br> extend cross-media technologies rather than cutting-edge experiences. <a href="#">Read More...</a>
+		</p></small>
+	</div>
 
-		<div id="first_left" class="press">
-			<div class="inner">
-				<a href="#">
-					<img src="images/press-nbcnewyork.gif"/>
-				</a>
-			</div>
-		</div>
-		<div class="press">
-			<div class="inner">
-				<a href="#">
-					<img src="images/press-huffpost.gif"/>
-				</a>
-			</div>
-		</div>
-		<div class="press">
-			<div class="inner"> 
-				<a href="#">
-					<img src="images/press-marieclaire.gif"/>
-				</a>
-			</div>
-		</div>
-		<div class="press">
-			<div class="inner"> 
-				<a href="#">
-					<img src="images/press-logo_lucky.gif"/>
-				</a>
-			</div>
-		</div>
-	</div><!-- #container --> 
+
+			<a href="#">
+				<img class="x" src="images/press-nbcnewyork.gif"/>
+			</a>
+
+			<a href="#">
+				<img class="x" src="images/press-huffpost.gif"/>
+			</a>
+
+			<a href="#">
+				<img class="x" src="images/press-marieclaire.gif"/>
+			</a>
+
+			<a href="#">
+				<img class="x" src="images/press-logo_lucky.gif"/>
+			</a>
+</div>
+</div>
 </body>
 </html>
